--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
   </head>
   <body>
     <header>
-      <h2 class="name-header">Sneha Kamat</h2>
+      <h2 class="header-title">Sneha Kamat</h2>
+      <div class="header-bio">
+        As a skilled Full Stack JavaScript Developer with expertise in multiple
+        programming languages and design frameworks, I am committed to producing
+        high-quality applications with consistent on-time deliveries. My eye for
+        design details and analytical abilities allow me to identify and prevent
+        missteps, ensuring seamless execution of projects.
+      </div>
     </header>
     <main class="resume-content">
       <aside>
